log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep

spec:
  replicas: 1

  selector:
    matchLabels:
      app: log-output

  template:
    metadata:
      labels:
        app: log-output

    spec:
      volumes:
        - name: shared-log
          emptyDir: {}

        - name: config-volume
          configMap:
            name: log-output-config

      containers:
        - name: writer
          image: log-writer
          imagePullPolicy: Never
        
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files

        - name: reader
          image: log-reader
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
          
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files

            - name: config-volume
              mountPath: /usr/src/app/config
