log_output/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: log-output-svc

spec:
  type: ClusterIP

  selector:
    app: log-output

  ports:
    - port: 80
      targetPort: 3000
