log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  namespace: exercises
  name: exercises-route

spec:

  parentRefs:

  - name: exercises-gateway

  rules:

  - matches:

    - path:
        type: PathPrefix
        value: /

    backendRefs:

    - name: log-output-svc
      port: 80

  - matches:

    - path:
        type: PathPrefix
        value: /pingpong

    filters:

    - type: URLRewrite

      urlRewrite:

        path:

          type: ReplacePrefixMatch

          replacePrefixMatch: /

    backendRefs:

    - name: ping-pong-service

      port: 80
